# autoMIL

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
benchmarks/: .env.example  .gitignore  README.md  pyproject.toml
benchmarks/datasets/: ccrcc.yaml  clwd.yaml  hancock.yaml  ovarian.yaml  placeholder.yaml  tcga_luad.yaml  tcga_template.yaml
benchmarks/experiments/ccrcc/.claude/: settings.json
benchmarks/experiments/ccrcc/automil/: .gitignore  config.yaml  learnings.md  program.md
benchmarks/experiments/clwd/automil/: config.yaml
benchmarks/experiments/ovarian_hrd/automil/: config.yaml  learnings.md  program.md
benchmarks/experiments/placeholder/automil/: config.yaml
benchmarks/lib/CLAM/dataset_modules/: dataset_generic.py
benchmarks/lib/CLAM/utils/: core_utils.py  utils.py
benchmarks/lib/SMMILe/: README.md  feature_extraction.py  feature_extraction_patch.py  generate_heatmap.py  pre_utils.py  requirements.txt  superpixel_generation.py
benchmarks/lib/SMMILe/multi/: create_splits.py  demo.py  eval.py  main.py  metric_calculate.py
benchmarks/lib/SMMILe/single/: demo.py  metric_calculate.py
benchmarks/lib/nnMIL/: .gitignore  README.md  TUTORIAL.md  __init__.py  environment.yml
benchmarks/lib/nnMIL/data/: __init__.py  dataset.py
benchmarks/lib/nnMIL/inference/: __init__.py  inference_engine.py
benchmarks/lib/nnMIL/network_architecture/: __init__.py  model_factory.py
benchmarks/lib/nnMIL/preprocessing/: __init__.py  experiment_planner.py  generate_dataset_json.py
benchmarks/lib/nnMIL/run/: nnMIL_plan_experiment.py  nnMIL_predict.py  nnMIL_predict_ensemble.py  nnMIL_run_training.py
benchmarks/lib/nnMIL/scripts/: run_bccc_2cls.sh  run_bccc_3cls.sh  run_bccc_5cls.sh  run_bracs_coarse.sh  run_bracs_fine.sh  run_ebrains_coarse.sh  run_ebrains_fine.sh  run_imp_crs.sh  (+5 more)
benchmarks/scripts/: refresh_goldmark_uuids.py  run_benchmark.py  run_experiment.py  run_feature_extraction.py  submit_3dataset_benchmark.sh  submit_benchmark.sh  submit_feature_extraction.sh  submit_feature_extraction_mig.sh  submit_gdc_download.sh  submit_test.sh  submit_test_extraction.sh
benchmarks/src/autobench/: __init__.py  config.py  data.py
benchmarks/tests/: _helpers.py  conftest.py  test_benchmark_config.py  test_benchmark_evaluate.py  test_benchmark_integration.py  test_benchmark_prepare.py  test_benchmark_train.py  test_config.py  test_data.py  test_encoders.py  test_gpu_worker.py  test_nnmil_prepare.py  test_openslide_pickle.py  test_run_feature_extraction.py  test_smmile_prepare.py  test_splits.py
(+633 files in other folders)
