[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "automil"
version = "0.1.0"
description = "Autonomous agent-driven MIL model improvement for computational pathology"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "watchdog>=4.0",
    "jinja2>=3.1",
    "click>=8.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "torch>=2.10.0",
    "scipy>=1.11",      # D-141 GTE-04: paired Wilcoxon + bootstrap CI (gate stats)
    "jsonschema>=4.18",  # D-201 DEC-03: result.json schema validation
]

[project.optional-dependencies]
ml = [
    "torch>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "h5py>=3.9",
]
slurm = ["submitit>=1.5.3"]   # BCK-05 — opt-in SLURM backend
ray   = ["ray>=2.55.1"]       # BCK-06 — opt-in Ray backend
examples-iris = ["scikit-learn>=1.4", "pyyaml>=6.0"]  # D-203 sklearn-iris consumer demo

[project.scripts]
automil = "automil.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/automil"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_slurm: requires SLURM cluster (skip in CI; nightly only)",
    "requires_ray: requires real Ray cluster (skip in CI; nightly only)",
    "requires_ccrcc_data: requires real CCRCC dataset at AUTOBENCH_CCRCC_ROOT (workstation only)",
]

[dependency-groups]
dev = [
    "numpy>=2.2.6",
    "pytest>=9.0.2",
    "scipy>=1.15.3",
]

[tool.uv.workspace]
members = ["benchmarks"]
