[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autobench"
version = "0.1.0"
description = "MIL benchmark suite for computational pathology — demonstrates autoMIL across multiple datasets"
requires-python = ">=3.10"
dependencies = [
    "trident @ file:////home/yinshuol/scratch/autoMIL/autoMIL/benchmarks/lib/TRIDENT",
    "python-dotenv",
    "transformers>=4.35,<5",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "h5py>=3.0",
    "tqdm>=4.60",
    "wandb>=0.25.0",
    "tensorboardx>=2.6.4",
    "tensorboard>=2.20.0",
    "beartype>=0.22.9",
    "jaxtyping>=0.3.7",
    "torch-geometric>=2.7.0",
    "scikit-image>=0.25.2",
    "pyyaml>=6.0",
    "pandas>=2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/autobench"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
